# RobotDataPlatform

./: .gitignore  LICENSE  PRD.md  README.md  README.zh-CN.md  Robot_Data_Studio_PRD_V1.0.docx  Untitled  build_prd_docx.py  package.json  pnpm-lock.yaml  pyproject.toml  自用.md
apps/api/: main.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  RerunViewer.test.tsx  RerunViewer.tsx  api.ts  i18n.ts  main.tsx  styles.css
data/urdf/: two_link_planar.urdf
docs/: USER_GUIDE.md
docs/superpowers/plans/: 2026-06-23-lerobot-inspect-slice.md  2026-06-26-score-sorted-cleaning-chart.md  2026-06-27-community-demo-video.md  2026-06-28-cleaning-report-dashboard.md  2026-06-29-dynamic-report-signal-charts.md  2026-06-30-episode-issue-tabs.md
docs/superpowers/specs/: 2026-06-23-robot-data-studio-design.md  (+5 more)
scripts/: benchmark_quality_scoring.py  copy-rerun-wasm.mjs  download_hf_dataset.py  download_sample.py  make_community_video.py  make_promo_video.py  qwen_filter_dataset.py  record_community_video.js  record_promo.js  record_promo_tail.js  report_charts.py
tests/api/: test_filter_details.py  test_projects.py
tests/formats/: forge_cross_validation.py  test_forge_cross_validation.py  test_format_registry.py  test_hdf5_and_zarr_formats.py
tests/lerobot/: test_reader.py
tests/quality/: test_filter_scoring.py  test_metadata_completeness.py  test_qwen_filters.py  test_time_sync.py  test_visual_quality.py  test_vlm_scorer.py
tests/reports/: test_signals.py
tests/scripts/: test_benchmark_quality_scoring.py  test_download_hf_dataset.py  test_qwen_filter_dataset.py  test_report_charts.py
tests/viewer/: test_rerun_recording.py
