[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-data-studio"
version = "0.1.0"
description = "Local-first robot dataset inspection and cleaning."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "h5py>=3.12,<4",
  "imageio-ffmpeg>=0.5,<1",
  "numpy>=1.26,<3",
  "pin>=4,<5",
  "pydantic>=2.10,<3",
  "pyarrow>=18,<20",
  "rerun-sdk>=0.33,<0.34",
  "uvicorn[standard]>=0.34,<1",
  "zarr>=2.18,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/robot_data_studio"]

[tool.pytest.ini_options]
pythonpath = ["packages", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
